--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,11 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
 }
-
+h2 {
+  font-size: 24px;
+  color: #433e3c;
+  margin-bottom: 20px;
+}
 .app {
   text-align: center;
   background-image: url('bg.jpg');
