--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -120,7 +120,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 700px;
+  max-width: 800px;
   background-color: rgba(255, 255, 255, 0.9); /* Hafif şeffaf */
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -394,9 +394,11 @@ button:active {
 }
 /*-------------------- PDF Dropzone -------------------- */
 .pdf-dropzone {
+  width: 300px;
+  height: 150px;
   border: 2px dashed #888;
   border-radius: 8px;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   cursor: pointer;
   transition: border-color 0.3s;
@@ -407,9 +409,9 @@ button:active {
 .pdf-label {
   background-color: #007bff;
   color: white;
-  padding: 6px 12px;
+  padding: 6px 10px;
   border-radius: 4px;
   cursor: pointer;
   display: inline-block;
-  margin-top: 10px;
+ 
 }
